# tdc-subprograms

./: .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  docker-compose.yml
.circleci/: config.yml
cmd/: CMakeLists.txt
cmd/tdc-bp-marker-ber-simulator/: CMakeLists.txt
cmd/tdc-bp-marker-ber-simulator/src/: main.cpp
cmd/tdc-capacity-calculator/: CMakeLists.txt
cmd/tdc-capacity-calculator/include/: tdc_capacity_calculator.hpp
cmd/tdc-capacity-calculator/src/: main.cpp  tdc_capacity_calculator.cpp
cmd/tdc-frozen-bit-analyzer/: CMakeLists.txt
cmd/tdc-frozen-bit-analyzer/include/: frozen_bit_analyzer.hpp
cmd/tdc-frozen-bit-analyzer/src/: frozen_bit_analyzer.cpp  main.cpp
cmd/tdc-raw-ber-simulator/: CMakeLists.txt
cmd/tdc-raw-ber-simulator/src/: main.cpp
cmd/tdc-sc-benchmark/: CMakeLists.txt
cmd/tdc-sc-benchmark/src/: main.cpp
cmd/tdc-sc-ber-simulator/: CMakeLists.txt
cmd/tdc-sc-ber-simulator/src/: main.cpp
cmd/tdc-scl-ber-simulator/: CMakeLists.txt
cmd/tdc-scl-ber-simulator/src/: main.cpp
cmd/tdc-scl-crc-benchmark/: CMakeLists.txt
cmd/tdc-scl-crc-benchmark/src/: main.cpp
cmd/tdc-scl-crc-ber-simulator/: CMakeLists.txt
cmd/tdc-scl-crc-ber-simulator/src/: main.cpp
docs/: todo.md
include/: command_line.hpp
include/channel/: bsc.hpp  tdc.hpp
include/estd/: combination_solver.hpp  default_random_engine.hpp  discrete_distribution.hpp  measure_time.hpp  negative_index_vector.hpp  parallel.hpp  random.hpp  range.hpp  stopwatch.hpp
include/hs/: hello.hpp
include/lcs/: bp_decoder.hpp  ldpc_ber_simulator.hpp  spmat.hpp
include/lcstdc/: bp_marker_decoder.hpp  likelihood_calculator.hpp
include/pcstdc/: drift_transition_prob.hpp  frozen_bit_selector.hpp  info_table_handler.hpp  polar_code_encoder.hpp  polar_crc_encoder.hpp  polar_encoder.hpp  rec_calculation_element.hpp  sc_decoder.hpp  scl_crc_decoder.hpp  scl_decoder.hpp
include/tdcs/: drift_transition_prob.hpp  likelihood_calculator.hpp
include/utl/: ber_simulator.hpp  crc_handler.hpp  cyclic_prior_prob.hpp  marker_encoder.hpp  marker_handler.hpp  marker_prior_prob.hpp  raw_decoder.hpp  raw_encoder.hpp  utility.hpp
scripts/dprobgen/: dprobgen.py
src/: main.cpp
src/channel/: CMakeLists.txt  bsc.cpp  tdc.cpp
src/hs/: CMakeLists.txt  hello.cpp
src/lcs/: CMakeLists.txt  bp_decoder.cpp  spmat.cpp
src/lcstdc/: CMakeLists.txt  bp_marker_decoder.cpp  likelihood_calculator.cpp
src/pcstdc/: CMakeLists.txt  drift_transition_prob.cpp  frozen_bit_selector.cpp  info_table_handler.cpp  polar_code_encoder.cpp  polar_encoder.cpp  sc_decoder.cpp  scl_crc_decoder.cpp  scl_decoder.cpp
src/tdcs/: CMakeLists.txt  drift_transition_prob.cpp  likelihood_calculator.cpp
test/: CMakeLists.txt  test.hpp
test/channel/: CMakeLists.txt  bsc_test.hpp  main.cpp  tdc_test.hpp
test/hello/: CMakeLists.txt  hello_test.hpp  main.cpp
test/pcstdc/: CMakeLists.txt  drift_transition_prob_test.hpp  main.cpp  polar_code_encoder_test.hpp  polar_encoder_test.hpp  sc_decoder_test.hpp  scl_crc_decoder_test.hpp  scl_decoder_test.hpp
test/tdcs/: CMakeLists.txt  drift_transition_prob_test.hpp  likelihood_calculator_test.hpp  main.cpp
test/utl/: CMakeLists.txt  ber_simulator_test.hpp  crc_handler_test.hpp  cyclic_prior_prob_test.hpp  main.cpp  marker_encoder_test.hpp  marker_handler_test.hpp  marker_prior_prob_test.hpp  raw_decoder_test.hpp  raw_encoder_test.hpp  utility_test.hpp
