cmake_minimum_required(VERSION 3.1)

add_subdirectory("./tdc-bp-marker-ber-simulator")
add_subdirectory("./tdc-capacity-calculator")
add_subdirectory("./tdc-frozen-bit-analyzer")
add_subdirectory("./tdc-raw-ber-simulator")
add_subdirectory("./tdc-sc-benchmark")
add_subdirectory("./tdc-sc-ber-simulator")
add_subdirectory("./tdc-scl-ber-simulator")
add_subdirectory("./tdc-scl-crc-benchmark")
add_subdirectory("./tdc-scl-crc-ber-simulator")
